--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>66022769 </h1>
+    <h1>66022769</h1>
     <h1>Poraparint Phakdeephoomin </h1>
+    <h1>SEICT66</h1>
 </body>
 </html>
